==> M5Fly-kanazawa/StampFly/lib/VL53L3CX_API_1.2.8/example/Src/vl53lx_platform.c <==
#include <vl53lx_platform.h>
#include "vl53lx_platform_ipp.h"
#include <vl53lx_platform_log.h>
#include "vl53lx_api.h"
#include "stm32xxx_hal.h"
#include <time.h>
#include <math.h>
#define I2C_TIME_OUT_BASE   10
#define I2C_TIME_OUT_BYTE   1
#define trace_print(level, ...) VL53LX_trace_print_module_function(VL53LX_TRACE_MODULE_PLATFORM, level, VL53LX_TRACE_FUNCTION_NONE, ##__VA_ARGS__)
#define trace_i2c(...) VL53LX_trace_print_module_function(VL53LX_TRACE_MODULE_NONE, VL53LX_TRACE_LEVEL_NONE, VL53LX_TRACE_FUNCTION_I2C, ##__VA_ARGS__)
#   define VL53LX_GetI2cBus(...) (void)0
#   define VL53LX_PutI2cBus(...) (void)0

int _I2CWrite(VL53LX_DEV Dev, uint8_t *pdata, uint32_t count) {
    int status;
    int i2c_time_out = I2C_TIME_OUT_BASE+ count* I2C_TIME_OUT_BYTE;
//    int i;
    i2cwriteCount+=count;
    status = HAL_I2C_Master_Transmit(Dev->I2cHandle, Dev->I2cDevAddr, pdata, count, i2c_time_out);

#if 0 // to be set to 1 to sniff I2C data  !!!!!
    sprintf(SPI2C_Buffer,"0,%d,%d",count,status);
    for(i=0; i<count; i++) {
    	sprintf(SPI2C_Buffer,"%s,%02X",SPI2C_Buffer,pdata[i]);
    }
	CH_printf(CH_ID_I2C,"%s\n",SPI2C_Buffer);
#endif

    if (status) {
        //VL6180x_ErrLog("I2C error 0x%x %d len", dev->I2cAddr, len);
        //XNUCLEO6180XA1_I2C1_Init(&hi2c1);
    }
    return status;
}

int _I2CRead(VL53LX_DEV Dev, uint8_t *pdata, uint32_t count) {
    int status;
    int i2c_time_out = I2C_TIME_OUT_BASE+ count* I2C_TIME_OUT_BYTE;

    i2creadCount+=count;
    status = HAL_I2C_Master_Receive(Dev->I2cHandle, Dev->I2cDevAddr|1, pdata, count, i2c_time_out);
    if (status) {
        //VL6180x_ErrLog("I2C error 0x%x %d len", dev->I2cAddr, len);
        //XNUCLEO6180XA1_I2C1_Init(&hi2c1);
    }
    return status;
}

VL53LX_Error VL53LX_WaitMs(VL53LX_Dev_t *pdev, int32_t wait_ms){
	(void)pdev;
	HAL_Delay(wait_ms);
    return VL53LX_ERROR_NONE;
}

VL53LX_Error VL53LX_WaitUs(VL53LX_Dev_t *pdev, int32_t wait_us){
	(void)pdev;
	HAL_Delay(wait_us/1000);
    return VL53LX_ERROR_NONE;
}
