==> M5Fly-kanazawa/StampFly/lib/vl53l3c/vl53lx_platform.c <==
#include <vl53lx_platform.h>
#include <vl53lx_platform_ipp.h>
#include <vl53lx_platform_log.h>
#include <vl53lx_api.h>
#include <time.h>
#include <math.h>
#include "driver/i2c.h"
#define I2C_TIME_OUT_BASE   10
#define I2C_TIME_OUT_BYTE   1
#define trace_print(level, ...) VL53LX_trace_print_module_function(VL53LX_TRACE_MODULE_PLATFORM, level, VL53LX_TRACE_FUNCTION_NONE, ##__VA_ARGS__)
#define trace_i2c(...) VL53LX_trace_print_module_function(VL53LX_TRACE_MODULE_NONE, VL53LX_TRACE_LEVEL_NONE, VL53LX_TRACE_FUNCTION_I2C, ##__VA_ARGS__)
#define I2C_MASTER_SDA_IO 3
#define I2C_MASTER_SCL_IO 4
#define I2C_MASTER_NUM              1                          /*!< I2C master i2c port number, the number of i2c peripheral interfaces available will depend on the chip */
#define I2C_MASTER_FREQ_HZ          400000                     /*!< I2C master clock frequency */
#define I2C_MASTER_TX_BUF_DISABLE   0                          /*!< I2C master doesn't need buffer */
#define I2C_MASTER_RX_BUF_DISABLE   0                          /*!< I2C master doesn't need buffer */
#define I2C_MASTER_TIMEOUT_MS       1000

int _I2CWrite(VL53LX_DEV Dev, uint8_t *pdata, uint32_t count) {
    int status;
    
    i2c_master_start(i2chandle);
    status = i2c_master_write_byte(i2chandle, (Dev->i2c_slave_address<<1)|I2C_MASTER_WRITE, I2C_MASTER_ACK);
    status = i2c_master_write(i2chandle, pdata, count, I2C_MASTER_ACK);
    return status;
}

int _I2CRead(VL53LX_DEV Dev, uint8_t *pdata, uint32_t count) {
    int status;

    i2c_master_start(i2chandle);
    status = i2c_master_write_byte(i2chandle, (Dev->i2c_slave_address<<1)|I2C_MASTER_READ, I2C_MASTER_ACK);
    if (count>1)
    {
        status = i2c_master_read(i2chandle, pdata, count-1, I2C_MASTER_ACK);
    }
    status = i2c_master_read_byte(i2chandle, pdata+count-1, I2C_MASTER_NACK);
    return status;
}

VL53LX_Error VL53LX_WaitMs(VL53LX_Dev_t *pdev, int32_t wait_ms){
	(void)pdev;
    ets_delay_us(wait_ms*1000);
	//delay(wait_ms);
    return VL53LX_ERROR_NONE;
}

VL53LX_Error VL53LX_WaitUs(VL53LX_Dev_t *pdev, int32_t wait_us){
	(void)pdev;
    ets_delay_us(wait_us);   
	//delay(wait_us/1000);
    return VL53LX_ERROR_NONE;
}
